# keBlog

./: .gitignore  middleware.ts  package.json
backend/: Dockerfile  README.md  db.sqlite3  pyproject.toml
backend/apps/commons/: admin.py  apps.py  auth_urls.py  error_codes.py  exceptions.py  permissions.py  responses.py  urls.py  viewsets.py
backend/apps/commons/migrations/: 0001_initial.py  0002_initial.py
backend/apps/commons/models/: __init__.py  partner.py  role.py  sequence.py  status_log.py  uom.py  user.py
backend/apps/commons/serializers/: base.py  partner.py
backend/apps/commons/services/: sequence_service.py  state_machine.py  status_log_service.py
backend/apps/commons/views/: partner.py
backend/apps/finance/: admin.py  urls.py
backend/apps/finance/migrations/: 0001_initial.py
backend/apps/finance/models/: __init__.py  voucher.py
backend/apps/finance/serializers/: voucher.py
backend/apps/finance/services/: voucher_service.py
backend/apps/finance/views/: voucher.py
backend/apps/inventory/: admin.py  urls.py
backend/apps/inventory/migrations/: 0001_initial.py
backend/apps/inventory/models/: __init__.py  product.py  stock.py  stock_move.py  warehouse.py
backend/apps/inventory/serializers/: product.py  stock.py  warehouse.py
backend/apps/inventory/services/: stock_service.py
backend/apps/inventory/views/: product.py  stock.py  warehouse.py
backend/apps/purchase/: admin.py  apps.py  urls.py
backend/apps/sales/: admin.py  urls.py
backend/config/: celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
(+109 files in other folders)
