[tool.poetry]
name = "erp-backend"
version = "0.1.0"
description = "ERP System Backend - Django REST Framework"
authors = ["ERP Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.0"
django-cors-headers = "^4.0"
django-filter = "^24.0"
drf-spectacular = "^0.27"
django-simple-history = "^3.0"
celery = "^5.3"
redis = "^5.0"
psycopg2-binary = "^2.9"
openpyxl = "^3.1"
gunicorn = "^23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "^4.0"
pytest-cov = "^4.0"
django-debug-toolbar = "^4.0"
ruff = "^0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
